# qr_writer

./: .gitignore  Cargo.toml  TODO.md
src/: ecc.rs  encoding.rs  errors.rs  export.rs  galois.rs  lib.rs  mask.rs  matrix.rs  qr.rs  reed_solomon.rs  tables.rs  versioning.rs
tables/: char_capacity.csv  codepoints.csv  remainder_bits.csv
